--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 /* 8. Add style to divs with the "container" class */
- {
+div.container {
   /* 9. Add 15px padding */
   
   /* 10. Make the background color of the container Carolina Blue using the hex code defined here: https://en.wikipedia.org/wiki/Carolina_blue*/
