--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ div.container {
   /* 9. Add 15px padding */
   padding: 15px;
   /* 10. Make the background color of the container Carolina Blue using the hex code defined here: https://en.wikipedia.org/wiki/Carolina_blue*/
-  background-color: 4B9CD3;
+  background-color: #4B9CD3;
 }
 
 input[type=text], input[type=password] {
@@ -34,14 +34,14 @@ h1 #register{
   /* 12. Make the text BOLD */
   font-weight: bold;
   /* 13. Make the text color navy (look up the hex code for navy) */
-  color: 202A44;
+  color: #202A44;
 }
 
 hr {
   /* 14. Override default hr style with a 30-pixel bottom margin */
   margin-bottom: 30ps;
   /* 15. Add a 2-pixel solid azure border (look up the hex code). */
-  border: 008AD8;
+  border: #008AD8;
   border-style: solid;
   border-width: 2px;
 }
@@ -49,9 +49,9 @@ hr {
 /* 16. Set a style for the submit button with "registerbtn" class */
  button.registerbtn{
   /* 17. Set the background color to navy using the hex color */
-  background-color: 202A44;
+  background-color: #202A44;
   /* 18. Set the text color to white using the hex color */  
-  
+  color: #ddd;
   padding: 16px 20px;
   margin: 8px 0;
   /* 19. Set it to have no border */
