--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ hr {
   padding: 16px 20px;
   margin: 8px 0;
   /* 19. Set it to have no border */
-  
+  border-style: none;
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
