--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,7 @@ hr {
 
 a {
   /* 20. Make link text color navy blue (look up the hex code) */
-  color: ;
+  color: #202A44;
   /* 21. Set the text-decoration to none for links */
   text-decoration: ;
 }
