--- a/public/style.css
+++ b/public/style.css
@@ -69,7 +69,7 @@ a {
   /* 20. Make link text color navy blue (look up the hex code) */
   color: #202A44;
   /* 21. Set the text-decoration to none for links */
-  text-decoration: ;
+  text-decoration: none;
 }
 
 /* 22. Set style for links using the :hover pseudoclass */
