--- a/public/style.css
+++ b/public/style.css
@@ -73,7 +73,7 @@ a {
 }
 
 /* 22. Set style for links using the :hover pseudoclass */
- {
+ :hover{
   /* 23. Change the color of links to azure on mouseover */
   
   /* 24. Set the text-decoration to underline for links on mouseover */
